--- a/HelpDesk/Views/Account/Login.cshtml
+++ b/HelpDesk/Views/Account/Login.cshtml
@@ -24,7 +24,7 @@
                 <input type="text" id="Username" name="Username" class="entry-input">
             </div>
             <div class="input-container">
-                <label for="Password">Parola:</label>
+                <label for="Password">Password:</label>
                 <input type="password" id="Password" name="Password" class="entry-input">
             </div>
             <button type="submit" class="login-button">Login</button>
